Fixed issue with alignment of category selector with input element.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,7 +48,7 @@ body {
 }
 
 .drop-down {
-  position: absolute;
+  position: fixed;
   background-color: white;
   border: black thin solid;
   border-radius: 4px;
